--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cp config/dev.env .env; next dev",
     "build": "next build",
     "start": "next start"
   },
@@ -12,6 +12,10 @@
   },
   "dependencies": {
     "@prisma/client": "^3.7.0",
+    "apollo-server-micro": "^3.6.2",
+    "graphql": "^16.2.0",
+    "micro-core": "^0.4.0",
+    "micro-cors": "^0.1.1",
     "next": "^12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -19,6 +23,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
+    "@types/micro-cors": "^0.1.2",
     "@types/node": "^16.3.2",
     "@types/react": "^17.0.14",
     "autoprefixer": "^10.4.1",
